Removed unnecessary LineHeight changes. Updated font to more fitting to design.

--- a/fonts.qrc
+++ b/fonts.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>RobotoCondensed.ttf</file>
+        <file>Lato-Bold.ttf</file>
+        <file>Lato-Regular.ttf</file>
     </qresource>
 </RCC>
